refactor: go doc and swagger
